Add inflow transaction types 'subscription' and 'gift-sub'
